Accessibility: Fix contrast ratio issues - end

--- a/Web-Accessibility/lesson6-styling/03-contrast-audit/blog.css
+++ b/Web-Accessibility/lesson6-styling/03-contrast-audit/blog.css
@@ -36,7 +36,7 @@ h6, .h6 {
  */
 
 .blog-masthead {
-  background-color: #428bca;
+  background-color: #566b9a;
   -webkit-box-shadow: inset 0 -2px 5px rgba(0,0,0,.1);
           box-shadow: inset 0 -2px 5px rgba(0,0,0,.1);
 }
@@ -47,7 +47,7 @@ h6, .h6 {
   display: inline-block;
   padding: 10px;
   font-weight: 500;
-  color: #cdddeb;
+  color: #eee;
 }
 .blog-nav-item:hover,
 .blog-nav-item:focus {
@@ -90,7 +90,7 @@ h6, .h6 {
 }
 .blog-description {
   font-size: 20px;
-  color: #999;
+  color: #666;
 }
 
 
@@ -146,7 +146,7 @@ h6, .h6 {
 }
 .blog-post-meta {
   margin-bottom: 20px;
-  color: #999;
+  color: #666;
 }
 
 
